// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballFixturesTicker with flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker with flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with fixturesPageUrl 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje iKoDpo"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje eZPTBn"
    />
    <div
      class="sc-bwzfXH uxFfR"
      height="80"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballFixturesTicker without flags should render correctly with isApp property 2`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb dBqngZ"
  >
    <div
      class="sc-htpNat sc-EHOje eZPTBn"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
